# mlops-recommender-system

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.ui  Makefile  README.md  SETUP.md  compose.yaml  convert_model.py  dvc.yaml  params.yaml  pyproject.toml  render.yaml  requirements.txt  start.sh  test_load.py
.github/workflows/: ci.yml  keep-alive.yml
configs/: data.yaml  eval.yaml  logging.yaml  model.yaml  serving.yaml  train.yaml
configs/hydra/: config.yaml
data/interim/: interactions.parquet  movies.csv  movies.parquet
data/processed/: feature_metadata.json  item_encoder.joblib  item_popularity.csv  item_popularity.parquet  test.parquet  train.parquet  train_matrix.npz  user_encoder.joblib  val.parquet  val_matrix.npz
docker/: Dockerfile.api  Dockerfile.train  Dockerfile.ui
models/: eval_metrics.json  metrics_by_k.csv  model.joblib  registered_model_info.json  train_metrics.json
src/: __init__.py
src/data/: __init__.py  download_data.py  make_dataset.py  split_dataset.py
src/features/: __init__.py  build_features.py
src/models/: __init__.py  evaluate.py  model_classes.py  recommend.py  register.py  train.py
src/serving/: __init__.py  api.py
src/ui/: __init__.py  app.py  style.css
src/utils/: __init__.py  io.py  logging.py  metrics.py  mlflow_utils.py  paths.py  reproducibility.py
tests/: __init__.py  conftest.py  test_api.py  test_data.py  test_features.py  test_models.py  test_recommender.py
