[tool.poetry]
name = "mlops-recommender-system"
version = "1.0.0"
description = "Systeme de recommandation MLOps de niveau production avec MovieLens"
authors = ["MLOps Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
numpy = "^1.26.0"
scipy = "^1.11.0"
scikit-learn = "^1.3.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
streamlit = "^1.29.0"
requests = "^2.31.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
structlog = "^23.2.0"
joblib = "^1.3.0"

[tool.poetry.group.training]
optional = true

[tool.poetry.group.training.dependencies]
implicit = "^0.7.2"
mlflow = "^2.9.0"
optuna = "^3.5.0"
hydra-core = "^1.3.0"
omegaconf = "^2.3.0"
dvc = "^3.30.0"
tqdm = "^4.66.0"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.26.0"
ruff = "^0.1.9"
black = "^23.12.0"
isort = "^5.13.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
pandas-stubs = "^2.1.0"
types-requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"
